// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Header correctly when logged in 1`] = `
<header
  className="header header--fixed-top"
  id="header"
  onScroll={[Function]}
>
  <div
    className="content-container"
  >
    <div
      className="header__content"
    >
      <Link
        className="header__title"
        replace={false}
        to="/dashboard"
      >
        <h1>
          Blogstoph
        </h1>
      </Link>
      <nav>
        <Link
          className="button button--link button--header"
          replace={false}
          to="/editor/dashboard"
        >
          Editor Area
        </Link>
        <a
          className="button button--link button--header"
          href=""
          onClick={[Function]}
        >
          Logout
        </a>
      </nav>
    </div>
  </div>
</header>
`;

exports[`should render Header correctly when logged in in private area 1`] = `
<header
  className="header header--fixed-top"
  id="header"
  onScroll={[Function]}
>
  <div
    className="content-container"
  >
    <div
      className="header__content"
    >
      <Link
        className="header__title"
        replace={false}
        to="/dashboard"
      >
        <h1>
          Blogstoph
        </h1>
      </Link>
      <nav>
        <Link
          className="button button--link button--header"
          replace={false}
          to="/dashboard"
        >
          Visitor Area
        </Link>
        <a
          className="button button--link button--header"
          href=""
          onClick={[Function]}
        >
          Logout
        </a>
      </nav>
    </div>
  </div>
</header>
`;

exports[`should render Header correctly when logged out 1`] = `
<header
  className="header header--fixed-top"
  id="header"
  onScroll={[Function]}
>
  <div
    className="content-container"
  >
    <div
      className="header__content"
    >
      <Link
        className="header__title"
        replace={false}
        to="/dashboard"
      >
        <h1>
          Blogstoph
        </h1>
      </Link>
      <nav />
    </div>
  </div>
</header>
`;
